2004-02-25  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.2.0 final! Same as rc3.

2004-02-24  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.2.0rc3 (same as rc2, with cBanana bug
	fixed).

2004-02-19  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/application/service.py (IService.disownServiceParent)
	(IServiceCollection.removeService): These may return Deferred if they
	have asynchronous side effects.

2004-02-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.2.0rc2. Brown-paper bag release bug.

2004-02-17  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.2.0rc1.

2004-02-13  Brian Warner  <warner@lothar.com>

	* doc/howto/faq.xhtml: add entry on transport.getPeer()

2004-01-31  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.2alpha2 (problem with Debian packaging).

2004-01-30  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.2alpha1.

2004-01-23  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/scripts/trial.py: trial now supports a --coverage
	option, requiring Python 2.3.3. Give it a directory name (relative
	to _trial_temp) to put code-coverage info in. It uses the stdlib
	'trace' module.

2004-01-21  Pavel Pergamenshchik  <pp64@cornell.edu>

	* twisted/protocols/stateful.py: A new way to write protocols!
	Current state is encoded as a pair (func, len). As soon as len
	of data arrives, func is called with that amount of data.  New
	state is returned from func.
	* twisted/test/test_stateful.py: Tests and an example, an
	Int32StringReceiver implementation.

2004-01-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/web/resource.py: The default render method of Resource
	now supports delegating to methods of the form "render_*" where
	"*" is the HTTP method that was used to make the
	request. Examples: request_GET, request_HEAD, request_CONNECT, and